@@ -1,20 +1,43 @@
-# P0ssible Mods are Alt, CtrlAlt, ShftAlt, Super
-# DESKTOPCHANGE results in :
-#               Alt+key         to change_desktops
-#               Shift+Alt+key   to follow_client_to_desktop
-#               Shift+Super+key to send client_to_desktop
+# Possible Mods are Alt, CtrlAlt, ShftAlt, Super, ShftSuper, CtrlSuper
 
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
 CMD xtermcmd;xterm;NULL;
 
-KEY DESKTOPCHANGE;1;0;
-KEY DESKTOPCHANGE;2;1;
-KEY DESKTOPCHANGE;3;2;
-KEY DESKTOPCHANGE;4;3;
-KEY DESKTOPCHANGE;5;4;
-KEY DESKTOPCHANGE;6;5;
+KEY Alt;1;change_desktop;0;
+KEY Alt;2;change_desktop;1;
+KEY Alt;3;change_desktop;2;
+KEY Alt;4;change_desktop;3;
+KEY Alt;5;change_desktop;4;
+KEY Alt;6;change_desktop;5;
+KEY Alt;7;change_desktop;6;
+KEY Alt;8;change_desktop;7;
+KEY Alt;9;change_desktop;8;
+KEY Alt;F10;change_desktop;9;
+
+KEY ShftAlt;1;follow_client_to_desktop;0;
+KEY ShftAlt;2;follow_client_to_desktop;1;
+KEY ShftAlt;3;follow_client_to_desktop;2;
+KEY ShftAlt;4;follow_client_to_desktop;3;
+KEY ShftAlt;5;follow_client_to_desktop;4;
+KEY ShftAlt;6;follow_client_to_desktop;5;
+KEY ShftAlt;7;follow_client_to_desktop;6;
+KEY ShftAlt;8;follow_client_to_desktop;7;
+KEY ShftAlt;9;follow_client_to_desktop;8;
+KEY ShftAlt;F10;follow_client_to_desktop;9;
+
+KEY ShftSuper;1;client_to_desktop;0;
+KEY ShftSuper;2;client_to_desktop;1;
+KEY ShftSuper;3;client_to_desktop;2;
+KEY ShftSuper;4;client_to_desktop;3;
+KEY ShftSuper;5;client_to_desktop;4;
+KEY ShftSuper;6;client_to_desktop;5;
+KEY ShftSuper;7;client_to_desktop;6;
+KEY ShftSuper;8;client_to_desktop;7;
+KEY ShftSuper;9;client_to_desktop;8;
+KEY ShftSuper;F10;client_to_desktop;9;
 
 KEY Alt;a;rotate_mode;1;
+KEY Alt;c;kill_client;
 KEY Alt;h;resize_master;10;
 KEY Alt;j;next_win;
 KEY Alt;k;prev_win;
