@@ -1,4 +1,7 @@
 # lines starting with a hash are ignored
+# Number of DESKTOPS should be first
+DESKTOPS 6
+
 # bartheme colours are :
 #    focused desktop in switcher
 #    unfocused desktop in switcher and bar background
@@ -24,6 +27,7 @@ DEFAULTMODE 0
 UF_WIN_ALPHA 65
 FOLLOWMOUSE 1
 CLICKTOFOCUS 0
+LEFT_WINDOWNAME 0
 WINDOWNAMELENGTH 35
 TOPBAR 0
 SHOW_BAR 0
